--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -30,9 +30,10 @@
 </div> <!--End main_close div-->
 <!-- ================================================================ Part of marquee tag ======================================== --> 
 <MARQUEE bgcolor="BLACK" direction="left" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="5"> <FONT color="white"> 
-Welcome to coding world book store </FONT> </MARQUEE>
+Welcome to coding world book store </FONT> </MARQUEE> <br>
 
-<!-- ================================================================ Part of div tag =============================================== -->
+<!-- ================================================================ Part of div (download book) tag =============================================== -->
+<div class="library"> <div class="lib_sec"> Library Book </div> </div> 
 <DIV class="container">
 
   <DIV class="book">
@@ -70,6 +71,8 @@ Welcome to coding world book store </FONT> </MARQUEE>
   </DIV> <!--End book div --> 
 
 </DIV> <!--End container div -->
+	<!-- ================================================================ Part of book link =================================== -->	
+<div class="library"> <div class="lib_sec"> Link </div> </div> 
 
 </BODY>
 </HTML>
