--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -1,7 +1,9 @@
 <HTML>
 <HEAD>
 <TITLE> Book store </TITLE>
-	<!--<script>
+<LINK rel="stylesheet" href="wpdvbook.css">
+
+<!--<script>
   var x = prompt("Enter Password");
   if(x == 25250){
     alert("Welcome to Coding World library");
@@ -12,7 +14,7 @@
 	}
   }
 </script>-->
-<LINK rel="stylesheet" href="wpdvbook.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
 <BODY>
@@ -32,46 +34,49 @@
 <MARQUEE bgcolor="BLACK" direction="left" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="5"> <FONT color="white"> 
 Welcome to coding world book store </FONT> </MARQUEE> <br>
 
-<!-- ================================================================ Part of div (download book) tag =============================================== -->
+<!-- ================================================================ Part of div tag =============================================== -->
 <div class="library"> <div class="lib_sec"> Library Book </div> </div> 
+
 <DIV class="container">
 
   <DIV class="book">
-	<img src="cov1.png">	
+	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
 	<div> 
 	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
-	<BR><p><b><font color="white"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys
-    </p> </font> <p>File type - .pdf </p> <p> Page - 144 </p> <p> Size - 811.18KB </p> 
+	<BR><p><b> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys</p>
+	<p>File type - .pdf </p> <p> Page - 144 </p> <p>Size - 811.18KB </p> 
 	<a href="wpdv1.pdf" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
 	</div>
   </DIV> <!--End book div --> 
   
   <DIV class="book">
-	<img src="cov2.png">	
+	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov2.png">	
 	<div>
 	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
-	<BR><p><b><font color="white"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to coding world</p> 
-	</font> <p>File type - .pdf </p> <p> Page -  </p> <p>Size -  </p> 
+	<BR><p><b> HTML, CSS, Java Script </b></p> 
+	<p>Credit to coding world </p>
+	<p>File type - .pdf </p> <p> Page -  </p> <p>Size -  </p> 
 	<a href="#" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
 	</div>
   </DIV> <!--End book div --> 
   
-  <!-- <DIV class="book">
-	<img src="cov1.png">	
+ <!-- <DIV class="book">
+	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
 	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys, 2025</p> </font></div>
   </DIV> <!--End book div --> 
   
-  <!-- <DIV class="book">
-	<img src="cov1.png">	
+ <!-- <DIV class="book">
+	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
 	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys, 2025</p> </font></div>
   </DIV> <!--End book div --> 
 
-</DIV> <br> <!--End container div -->
-	<!-- ================================================================ Part of book link =================================== -->	
+</DIV> <!--End container div -->
+
+       <!-- ================================================================ Part of book link =================================== -->	
+
 <div class="library"> <div class="lib_sec"> Link </div> </div> 
 
 </BODY>
