--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -40,7 +40,7 @@ Welcome to coding world book store </FONT> </MARQUEE> <br>
 <DIV class="container">
 
   <DIV class="book">
-	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
+	<img src="cov1.png">	
 	<div> 
 	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
 	<BR><p><b> HTML, CSS, Java Script </b></p> 
@@ -51,7 +51,7 @@ Welcome to coding world book store </FONT> </MARQUEE> <br>
   </DIV> <!--End book div --> 
   
   <DIV class="book">
-	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov2.png">	
+	<img src="cov2.png">	
 	<div>
 	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
 	<BR><p><b> HTML, CSS, Java Script </b></p> 
