--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -35,7 +35,7 @@
 Welcome to coding world book store </FONT> </MARQUEE> <br>
 
 <!-- ================================================================ Part of div tag =============================================== -->
-<div class="library"> <div class="lib_sec"> Library Book </div> </div> 
+<div class="library"> <div class="lib_sec"> Notes </div> </div> 
 
 <DIV class="container">
 
