--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -75,9 +75,32 @@ Welcome to coding world book store </FONT> </MARQUEE> <br>
 
 </DIV> <!--End container div -->
 
-       <!-- ================================================================ Part of book link =================================== -->	
+        <!-- ================================================================ Part of book link =================================== -->	
 
 <div class="library"> <div class="lib_sec"> Link </div> </div> 
+
+<div class="link">
+ <a href="#" class="lnk"> <div class="box">  HTML tag list (.pdf) </div> </a>
+ <a href="#" class="lnk"> <div class="box">  CSS properties list (.pdf) </div> </a>
+</div>
+
+	<!-- ==================================================================== Part of project ==================================== -->
+	
+<div class="library"> <div class="lib_sec"> Project </div> </div> 	
+
+<div class="table">
+<table>
+  <tr class="tr"><th>Project Name</th> <th>Code Use</th> <th>File Type</th> <th>Size</th> <th>Download Link</th> </tr>
+  <tr align="center">
+      <td>Check Vowel & Consonent</td> 
+	  <td>HTML,CSS,Java Script</td>
+	  <td>.pdf</td>
+	  <td> --- </td> 
+	  <td> <a href="#" download="WPDV_Proj1" class="proj">Not Available</a></td>
+  </tr>
+</table>
+</div>
+
 
 </BODY>
 </HTML>
