--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <br>
 	<div class="devloper_name">
-	    <i class="fa-regular fa-copyright"></i> &nbsp; Created by - Bikram Haldar (2024 - 25) Coding World
+	    <i class="fa-regular fa-copyright"></i> &nbsp;<b>Created by - Bikram Haldar (2025 - 26) Coding World </b>
 	</div>
 </footer>
 
