--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -56,8 +56,8 @@ Welcome to coding world book store </FONT> </MARQUEE> <br>
 	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
 	<BR><p><b> HTML, CSS, Java Script </b></p> 
 	<p>Credit to coding world </p>
-	<p>File type - .pdf </p> <p> Page -  </p> <p>Size -  </p> 
-	<a href="#" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
+	<p>File type - .pdf </p> <p> Page - 34  </p> <p>Size -9.6MB  </p> 
+	<a href="WPDV2.pdf" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
 	</div>
   </DIV> <!--End book div --> 
   
