--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -80,8 +80,8 @@ Welcome to coding world book store </FONT> </MARQUEE> <br>
 <div class="library"> <div class="lib_sec"> Link </div> </div> 
 
 <div class="link">
- <a href="#" class="lnk"> <div class="box">  HTML tag list (.pdf) </div> </a>
- <a href="#" class="lnk"> <div class="box">  CSS properties list (.pdf) </div> </a>
+ <a href="htmltags.pdf" class="lnk" download="Coding World"> <div class="box">  HTML tag list (.pdf) </div> </a>
+ <a href="CSSProperties.pdf" class="lnk" download="Coding World"> <div class="box">  CSS properties list (.pdf) </div> </a>
 </div>
 
 	<!-- ==================================================================== Part of project ==================================== -->
