--- a/Register.html
+++ b/Register.html
@@ -14,7 +14,7 @@
 	  <UL>
 	    <LI><A href="index.html">Home</A></LI>
 		<LI><A href="about.html">About us</A></LI>
-		<LI><A href="project & assignment.html">Projects & Assignment</A> </LI>
+		<!-- <LI><A href="project & assignment.html">Projects & Assignment</A> </LI> -->
 		<LI><A href="Register.html" class="active">Registration</A></LI>
 	  </UL>
 </NAV>
