--- a/Register.html
+++ b/Register.html
@@ -89,7 +89,17 @@
   </DIV>
  </DIV>
  
- <DIV class="message"> <FONT color="red"><b>* A student can only apply to one course </b></FONT> </DIV>
+ <DIV class="message"> <FONT color="red"><b>* A student can only apply to one course </b></FONT> </DIV> <br>
+
+<DIV class="message1"> <FONT color="" > <b> ----- How to apply course -----</b> </FONT> <br><br>
+ <b> Step 1 > </b> Click the <b> Registration </b> option. And fill-up this form. <br>
+ <b> Step 2 > </b> Check your email. And you will receive a unique application id from us within 1 hour. <br>
+ <b> Step 3 > </b> Now click your favourite <b>course</b> option from home page. And click <b> Apply Now </b> button and fill-up this form & submit it.
+ </DIV> <br>
+
+ <font color="red"> <b> * If you will not receive any application id wthin 1h . Then you can contact with us.</b></font> <br><br>
+  E-mail : bikramhaldar608@gmail.com <br>
+  Phone  : 9547 437 329			
 
  </FORM> <!--End form-->
 
