--- a/Register.html
+++ b/Register.html
@@ -24,7 +24,7 @@
     <DIV class="register">
 	<FORM id="register" method="post" name="google-sheet">
 	
-	<TABLE border="0px" cellspacing="4px" cellpadding="3px">
+	<TABLE border="0px" cellspacing="4px" cellpadding="3px" align="center">
 	
 	<TR><TH colspan="4"><FONT color="gray"><h2>Registration Form</h2></FONT></TH></TR>
 	
