--- a/Register.html
+++ b/Register.html
@@ -92,7 +92,7 @@
  <DIV class="message"> <FONT color="red"><b>* A student can only apply to one course </b></FONT> </DIV> <br>
 
 <DIV class="message1"> <FONT color="" > <b> ----- How to apply course -----</b> </FONT> <br><br>
- <b> Step 1 > </b> Click the <b> Registration </b> option. And fill-up this form and submit it.<br>
+ <b> Step 1 > </b> Click the <b> Registration </b> option. And fill-up this form & submit it.<br>
  <b> Step 2 > </b> Check your email. And you will receive a unique registration id from us within 1 hour. <br>
  <b> Step 3 > </b> Now click your favourite <b>course</b> option from home page. And click <b> Apply Now </b> button and fill-up this form & submit it.
  </DIV> <br>
