--- a/Register.html
+++ b/Register.html
@@ -97,7 +97,7 @@
  <b> Step 3 > </b> Now click your favourite <b>course</b> option from home page. And click <b> Apply Now </b> button and fill-up this form & submit it.
  </DIV> <br>
 
- <font color="red"> <b> * If you will not receive any application id wthin 1h . Then you can contact with us.</b></font> <br><br>
+ <font color="red"> <b> * If you have not receive any registration id wthin 1h . Then you can contact with us.</b></font> <br><br>
   E-mail : bikramhaldar608@gmail.com <br>
   Phone  : 9547 437 329			
 
