--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
 <BODY>
 	<!--=========================================== Part of navigation meanu ================================ -->
 	<NAV>
+<!-- ==== side nav bar -->
+<div id="mySidenav" class="sidenav">
+ <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+ <a href="#">About</a>
+ <a href="#">Services</a>
+ <a href="#">Clients</a>
+ <a href="#">Contact</a>
+ </div> <!-- end side nav-->
+ 
+ <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+ 
+ <script>
+function openNav() {
+ document.getElementById("mySidenav").style.width = "250px";
+}
+function closeNav() {
+ document.getElementById("mySidenav").style.width = "0";
+}
+</script>
+
+		
 	  <DIV class="logo">
         <H1>Coding <FONT color="cyan">World</FONT></H1>
 	  </DIV>
