--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <a href="#">Contact</a>
  </div> <!-- end side nav-->
  
- <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+  <span style="font-size:30px;cursor:pointer" class="line" onclick="openNav()"> &nbsp;&nbsp; &#9776; </span>
  
  <script>
 function openNav() {
