--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!--========================================================= Part of laptop_image ==================================================-->		
 	
-<DIV class="banner_image">
+<!-- <DIV class="banner_image">
         <img src="Web.jpeg" class="laptop_image" alt="laptop_image_banner">
 	<DIV class="center_text">
 	   <DIV class="typing">	
@@ -31,7 +31,59 @@
 		 start your coding journey with us.
 		</P>
 	</DIV>	
-</DIV><BR><BR>
+</DIV><BR><BR> -->
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="C:\Users\user\OneDrive\Pictures\Web.jpeg" class="slide_image">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="C:\Users\user\OneDrive\Pictures\J.jpeg" class="slide_image">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="C:\Users\user\OneDrive\Pictures\W.jpeg" class="slide_image">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
+
+<script>
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
  
         <!-- ========================================================= Part of logo ======================================================= -->
 <DIV class="Website_logo">
@@ -145,3 +197,4 @@
 	
 </BODY>
 </HTML>
+
