--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="C:\Users\user\OneDrive\Pictures\Web.jpeg" class="slide_image">
+  <img src="Web.jpeg" class="slide_image">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="C:\Users\user\OneDrive\Pictures\J.jpeg" class="slide_image">
+  <img src="J.jpeg" class="slide_image">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="C:\Users\user\OneDrive\Pictures\W.jpeg" class="slide_image">
+  <img src="W.jpeg" class="slide_image">
   <div class="text">Caption Three</div>
 </div>
 
@@ -197,4 +197,5 @@ function showSlides() {
 	
 </BODY>
 </HTML>
+
 
