--- a/Register.html
+++ b/Register.html
@@ -61,7 +61,7 @@
 	
 	<TR> <!--Start 4th table row-->
 	<TD><B> Email<FONT color="red" size="5px">*</FONT></B></TD>
-	    <TD><INPUT type="text" name="EMAIL ID" placeholder="Enter valid email id..." required></TD>	
+	    <TD><INPUT type="email" name="EMAIL ID" placeholder="Enter valid email id..." required></TD>	
 		
 	<TD><B> Choose Course<FONT color="red" size="5px">*</FONT></B></TD>
 	<TD><SELECT name="COURSE" required>
@@ -120,3 +120,4 @@
 
 </BODY>
 </HTML>
+
